gl51-master/src/test/deca/context/valid/test-Several_Init.deca
// Description

{
    int a;
    float b;
    boolean c;
    // println(c); on peut pas print boolean, on a pas le droit
    string e;
}