gl51-master/src/test/deca/context/invalid/testObject_rule3_33ArithmOp.deca
// Description

class A {}
{
    int entier = 2;
    A a = new A();
    entier = entier + a; //errir car on ne peut pas sun in int et une class
}
//passed
